aligned voting bar and fixed header

--- a/client/components/Header/header.css
+++ b/client/components/Header/header.css
@@ -7,8 +7,9 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  padding: 8px;
   background-color: #FF4E4E;
+  display: flex;
+  align-items: center;
 }
 
 .header div:last-child {
@@ -18,16 +19,18 @@
 .logo {
   height: 30px;
   width: 20px;
-  margin-left: 200px;
 }
 
 .header-title {
   font-size: 19px;
   margin-left: 10px;
-  margin-top: 20px;
-  /*align-self: flex-start;*/
-  color: white;
+  margin-top: 5px;
+
 }
+
+.header-title a {
+  color: white;
+}  
 
 .header-title:hover, a:hover, a {
   text-decoration: none;
