--- a/client/components/Login/login.css
+++ b/client/components/Login/login.css
@@ -11,7 +11,7 @@
   background-color: white;
   border-radius: 20px;
   color: #FF4E4E;
-  padding: 5px 30px;
+  /*padding: 5px 30px;*/
   border-style: none;
   font-size: 9px;
 }
